--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Khmer:wght@500&display=swap" rel="stylesheet">
-  <link rel="shortcut icon" href="../img/roth.jpeg" type="image/x-icon">  
+  <link rel="shortcut icon" href="roth.jpeg" type="image/x-icon">  
   <title>replit</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -24,7 +24,7 @@
   </nav>
   <div id="about">
     <h1>About Me</h1>
-    <img src="../img/roth.jpeg">
+    <img src="roth.jpeg">
     <p>ខ្ញុំបាទមានឈ្មោះទូចពុទ្ធរ័ត្ន(Touch Put Roth)ខ្ញុំមានអាយុដប់បីឆ្នាំ ចំណែកឯសាលារបស់ខ្ញុំមានឈ្មោះថាសាលាបឋមសិក្សាកំផែងនៅខេត្តបាត់ដំបង</p>
   </div>
   <div id="contact">
