--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Khmer:wght@500&display=swap" rel="stylesheet">
-  <link rel="shortcut icon" href="roth.jpeg" type="image/x-icon">  
+  <link rel="shortcut icon" href="roth.icon" type="image/x-icon">  
   <title>replit</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
