--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <meta name="author" content="Put Roth">
   <title>My self</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Khmer:wght@500&display=swap" rel="stylesheet">
-  <link rel="shortcut icon" href="roth.icon" type="image/x-icon">  
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Khmer:wght@500&display=swap" rel="stylesheet">
+  <link rel="icon" href="roth.jpeg">
   <title>replit</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
