--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <p>Phone: 096 582 4705</p>
   </div>
   <footer>
-    <h5>Copyright @ 2023 <br>Touch Put Roth</h5>
+    <h5>Copyright ៙ 2023 <br>Touch Put Roth</h5>
   </footer>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
